--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <div class="calculator d-flex align-items-center justify-content-center">
         <div class="calculator-box">
-            <h1 class="text-center ">CALCULATOR</h1>
+            
             <div class="row">
-                <input type="text" placeholder="0" id="result" class="form-control mx-3" readonly>
+                <input type="text" placeholder="0" id="result" class="form-control mx-3 my-4" readonly>
             </div>
             <div class="row">
                 <div class="d-flex justify-content-between">
